WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13006
XPath string-value is broken for some node types
https://bugs.webkit.org/show_bug.cgi?id=13006
Summary
XPath string-value is broken for some node types
Alexey Proskuryakov
Reported
2007-03-07 14:08:00 PST
String-value shouldn't work recursively for elements and document nodes, as the result is nonsensical then. Also, string-value should be implemented for CDATA nodes. Patch forthcoming.
Attachments
proposed fix
(5.68 KB, patch)
2007-03-07 14:12 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-03-07 14:12:37 PST
Created
attachment 13527
[details]
proposed fix
Darin Adler
Comment 2
2007-03-07 15:02:24 PST
Comment on
attachment 13527
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2007-03-08 00:29:55 PST
Committed revision 20055.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug